objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Form_GSE__c</fullName>
        <label>Form</label>
        <picklist>
            <picklistValues>
                <fullName>Beads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crystal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directly Compressible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Crystal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Granular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pellet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <description>What is the freight cost?</description>
        <inlineHelpText>Enter the dollar account of the freight cost and whether it&apos;s per the UOM, per Ton, MT, DMT, or otherwise.</inlineHelpText>
        <label>Freight</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_PCT_for_GSE__c</fullName>
        <formula>GM_for_GSE__c  /  Selling_Total_Amount__c  * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM % for GS&amp;E</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GM_for_GSE__c</fullName>
        <formula>Selling_Total_Amount__c  -  Cost_Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM for GS&amp;E</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GSE_Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GS&amp;E Competitor Name using the Vendor Object with filtered lookup.</description>
        <label>GS&amp;E Competitor Name</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (GSE Competitor Name)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSE_Competitor_Producer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GS&amp;E Competitor&apos;s Producer Name.</description>
        <label>Competitor&apos;s Producer Name</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (GSE Competitor&apos;s Producer Name)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSE_Producer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GS&amp;E Producer Name</description>
        <label>GS&amp;E Producer Name</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (GSE Producer Name)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSE_Product_Manager__c</fullName>
        <formula>Product__r.GS_E_Product_Manager__r.FirstName &amp; &quot; &quot; &amp; Product__r.GS_E_Product_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GS&amp;E Product Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSE_Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Global Sourcing &amp; Export&apos;s Supplier Name.</description>
        <label>GS&amp;E Supplier Name</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (GS&amp;E Supplier Name)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grade_GSE__c</fullName>
        <description>Grade</description>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Cosmetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diaphragm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feed Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuel Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhibited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-compendial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parenteral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rayon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reagent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Competitor_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IC Competitor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (IC Competitor)</relationshipLabel>
        <relationshipName>IC_Competitor_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IC_Competitor__c</fullName>
        <label>IC Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Brenntag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexeo Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonial Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawkins Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jones Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KA Steel Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVS Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acme Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afton Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Producer_Partner_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IC Producer Partner</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (OPP IC Producer Partner)</relationshipLabel>
        <relationshipName>IC_Producer_Partner_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_Product_Assistance_Needed__c</fullName>
        <inlineHelpText>Do you feel additional assistance is required from internal business partners (e.g. industry, product mgmt., etc.) to close-win the business?</inlineHelpText>
        <label>Industry/Product Assistance Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Both Industry and Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Stage__c</fullName>
        <inlineHelpText>This field overwrites the standard Stage field.  See your Industry Manager for which Industry Stage values overwrite which Stage values.</inlineHelpText>
        <label>Industry Stage</label>
        <picklist>
            <controllingField>Opportunity_Industry__c</controllingField>
            <picklistValues>
                <fullName>Specification or Literature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formulation Tool Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Requested by Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Testing In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Tested and Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale Up Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale up Batch or Production Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stability/Regulatory/Marketing Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank - Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank - Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank - Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank - First Fill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loading_Port__c</fullName>
        <label>Loading Port</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MB_Annual_Lbs__c</fullName>
        <inlineHelpText>Pounds Per Gallon
Caustic soda 50%        12.71
Caustic Soda 25%        10.62
Citric Acid Solution     10.34
Hydrochloric Acid       9.67
Potassium hydroxide   12.09
Sodium Bisulfite          10.80
Sulfuric Acid                15.29</inlineHelpText>
        <label>MB Annual Lbs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MB_Competitor__c</fullName>
        <label>MB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Brenntag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nexeo Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colonial Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawkins Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jones Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KA Steel Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVS Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acme Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afton Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mini_Bulk_Competitor_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mini Bulk Competitor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Opportunities (Mini Bulk Competitor)</relationshipLabel>
        <relationshipName>MiniBulk_Competitor_Opps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mini_Bulk_Tank_Stage__c</fullName>
        <inlineHelpText>Post Closed Won Stage for Mini-Bulk</inlineHelpText>
        <label>Mini-Bulk Stage</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Tank to be Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Filled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Industry__c</fullName>
        <description>The industry with which the company is involved.</description>
        <inlineHelpText>The industry with which the company is involved.</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Biofuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Treatment</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <inlineHelpText>Volume Growth: Univar Existing 
Identified volume increase over historical/current volume levels

Volume Growth: Competitor
Competitor supplies product; volume increase potential

Developmental
Product being evaluated; not currently purchased</inlineHelpText>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Developmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume Churn:Maintain Current Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume Growth:Competitor Current Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume Growth:Univar Existing Business</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_GSE__c</fullName>
        <label>Package</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk vessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexibag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO Tank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini-Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote/IBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PriceperUOM__c</fullName>
        <label>$ per UOM</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricingUOM__c</fullName>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carboy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cubic Foot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cylinder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Pint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Indicator__c</fullName>
        <formula>IF (ISPICKVAL(Priority__c, &apos;5&apos;), IMAGE(&apos;/servlet/servlet.FileDownload?file=015a0000002kOmf&apos;,&apos;5&apos;,18,38), 
IF (ISPICKVAL(Priority__c, &apos;4&apos;), IMAGE(&apos;/servlet/servlet.FileDownload?file=015a0000002kOme&apos;,&apos;4&apos;,18,38), 
IF (ISPICKVAL(Priority__c, &apos;3&apos;), IMAGE(&apos;/servlet/servlet.FileDownload?file=015a0000002kOmd&apos;,&apos;3&apos;,18,38), 
IF (ISPICKVAL(Priority__c, &apos;2&apos;), IMAGE(&apos;/servlet/servlet.FileDownload?file=015a0000002kOmc&apos;,&apos;2&apos;,18,38), 
IF (ISPICKVAL(Priority__c, &apos;1&apos;), IMAGE(&apos;/servlet/servlet.FileDownload?file=015a0000002kOmb&apos;,&apos;1&apos;,18,38), &quot;&quot;)))))</formula>
        <inlineHelpText>Visual representation of the USPOT Insight Priority</inlineHelpText>
        <label>Priority Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>1= Lowest
5= Highest</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Producer_ID__c</fullName>
        <description>The Producer&apos;s ID number for the opportunity.</description>
        <inlineHelpText>The Producer&apos;s ID number for the opportunity.</inlineHelpText>
        <label>Producer ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Name__c</fullName>
        <label>Producer Name</label>
        <picklist>
            <picklistValues>
                <fullName>3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.G. Layne, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB Colby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accurez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceto Corp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACME Hardesty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Zoller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Polymer Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Fleming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Staley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afton Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agrium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airgas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Products &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akzo Nobel Industrial Chemicals B.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama Pigment Co</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albemarle Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberdingk-Boley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albright &amp; Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcan Intl Network US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alchemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexander Chemical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>